changed sample env

--- a/config/sample.env
+++ b/config/sample.env
@@ -19,13 +19,13 @@
 #	ENKETO_THEMES_SUPPORTED_1=kobo
 #
 
-# ENKETO_APP_NAME=Enketo Smart Paper for KoBoCAT
+ENKETO_APP_NAME=Enketo Express for Data 123
 
 # ENKETO_PORT=8005
 
 # ENKETO_OFFLINE_ENABLED=true
 
-# ENKETO_LINKED_FORM_AND_DATA_SERVER_NAME=KoBoCAT
+ENKETO_LINKED_FORM_AND_DATA_SERVER_NAME=Data 123
 # ENKETO_LINKED_FORM_AND_DATA_SERVER_SERVER_URL=kf.kobotoolbox.org
 # ENKETO_LINKED_FORM_AND_DATA_SERVER_API_KEY=enketorules
 # ENKETO_LINKED_FORM_AND_DATA_SERVER_LEGACY_FORMHUB=false
